syntax = "proto3";

package taask.server.crypto;
option go_package = "github.com/taask/taask-server/crypto";

message serializablePubKey {
	string N = 1;
	int64 E = 2;
	string KID = 3;
}